--- a/client/lab_3/style.css
+++ b/client/lab_3/style.css
@@ -252,13 +252,13 @@ div.carousel {
   height: 45px;
   padding: 10px;
   line-height: 0; /* This centers a button's text! */
-  border: 2px solid rgb(99,99,99); /* shorthand for how to do a border */
+  border: 2px solid rgb(255, 142, 232); /* shorthand for how to do a border */
 }
 
 .prev:focus,
 .next:focus {
   margin: 0;
-  color: rgba(0, 139, 19, 0.8);
+  color: rgba(255, 55, 182, 0.8);
   /* Pick a good border colour and check out how it works with your buttons */
 }
 
