--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -1,52 +1,3 @@
-
-/*
-Form Styles
-*/
-
-form input {
-    /* This is a hack to make sure our boxes line up with one another nicely */
-    width: 100%;
-    width: -moz-available;          /* WebKit-based browsers will ignore this. */
-    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
-    width: fill-available;
-
-    /* here we are setting white space correctly */
-    margin-bottom: 1rem;
-    height: 2rem;
-    border-radius: 4px;
-  }
-
-form label {
-  width: 100%;
-  width: -moz-available;          /* WebKit-based browsers will ignore this. */
-  width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
-  width: fill-available;
-  align-items: flex-start;
-
-  display: block; /* this turns the label text into a box we can set margins on */
-  margin-bottom: 0.5rem;
-}
-
-/* How To Write A Media Query For Small Screens */
-
-@media only screen and (max-width: 736px){
-    /* Rules in here will only apply when a screen is the correct size */
-    /* check it out by using your developer tools to shrink your screen-size */
-    .container {
-      background-color: rgba(204, 8, 162, 0.65);
-    }
-}
-
-
-* {
-  box-sizing: border-box;
-}
-
-/* 
-  These rules apply to actual HTML elements with no labelling!
-  So: they style the tags directly
-*/
-
 html {
   background-color: #fff;
   font-size: 16px;
@@ -60,7 +11,7 @@ html {
   text-rendering: optimizeLegibility;
   -webkit-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
-  text-size-adjust: 100%;
+  text-size-adjust: 100%; 
 }
 
 body {
@@ -79,7 +30,7 @@ a {
   text-decoration: none;
 }
 
-h2 {
+h2, h3 {
   margin:0;
   padding:0;
   padding-bottom:1.5rem;
@@ -308,3 +259,52 @@ div.carousel {
   background-color: hsla(303, 97%, 27%, 0.32);
   /* Pick a good background colour for your hover pseudoclass */
 }
+
+/*
+Form Styles
+*/
+
+form input {
+    /* This is a hack to make sure our boxes line up with one another nicely */
+    width: 100%;
+    width: -moz-available;          /* WebKit-based browsers will ignore this. */
+    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+    width: fill-available;
+
+    /* here we are setting white space correctly */
+    margin-bottom: 1rem;
+    height: 2rem;
+    border-radius: 4px;
+  }
+
+form label {
+  width: 100%;
+  width: -moz-available;          /* WebKit-based browsers will ignore this. */
+  width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+  width: fill-available;
+  align-items: flex-start;
+
+  display: block; /* this turns the label text into a box we can set margins on */
+  margin-bottom: 0.5rem;
+}
+
+/* How To Write A Media Query For Small Screens */
+
+@media only screen and (max-width: 736px){
+    /* Rules in here will only apply when a screen is the correct size */
+    /* check it out by using your developer tools to shrink your screen-size */
+    .container {
+      background-color: rgba(204, 8, 162, 0.65);
+    }
+}
+
+
+* {
+  box-sizing: border-box;
+}
+
+/* 
+  These rules apply to actual HTML elements with no labelling!
+  So: they style the tags directly
+*/
+
