--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -298,6 +298,9 @@ form label {
     /* check it out by using your developer tools to shrink your screen-size */
     .container {
       background-color: rgba(204, 8, 162, 0.65);
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 }
 
