--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -71,6 +71,8 @@ form {
   padding-left: 1rem;
   padding-right: 1rem; */
   padding-bottom: 1.5rem;
+  border: 2px dashed;
+  border-radius: 4px;
 }
 
 
