--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -69,8 +69,9 @@ form {
 .header {
   /* padding-top: 1rem;
   padding-left: 1rem;
-  padding-right: 1rem; */
-  padding-bottom: 1.5rem;
+  padding-right: 1rem;
+  padding-bottom: 1.5rem; */
+  
   border: 2px dashed;
   border-radius: 4px;
 }
