--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -67,10 +67,10 @@ form {
 }
 
 .header {
-   padding-top: 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-bottom: 1.5rem; 
+   padding-top: .2rem;
+  padding-left: .2rem;
+  padding-right: .2rem;
+  padding-bottom: .2rem; 
   
   border: 2px dashed;
   border-radius: 4px;
