--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -128,7 +128,7 @@ form {
 
 .left_section {
   background-color: rgba(0, 139, 139, 0.8);
-  flex: 0 1 auto;
+  /* flex: 0 1 auto; */
   margin: 1rem;
   padding: 1.5rem;
  
@@ -136,12 +136,13 @@ form {
 
 .right_section {
   background-color: rgba(255, 224, 138, 0.7);
-  flex: 1 2 auto;
+  /* flex: 1 2 auto; */
   margin: 1rem;
   align-items: center;
   max-width: 450px;
   display: flex;
   flex-flow: column;
+  flex-grow: 2;
   
 }
 
