--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -61,7 +61,7 @@ form {
 .container {
   margin: 0 20px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: start;
   flex:1;
 }
