--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #fff;
+  background-color: #feeada;
   font-size: 16px;
   min-width: 300px;
   overflow-x: hidden;
@@ -21,7 +21,7 @@ body {
   font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’, ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  background-color: rgb(239, 239, 239);
+  background-color: #fbede1;
 }
 
 
@@ -68,7 +68,7 @@ form {
 
 .header {
   
-   padding-top: .2rem;
+  padding-top: .2rem;
   padding-left: .2rem;
   padding-right: .2rem;
   padding-bottom: .2rem; 
@@ -88,12 +88,14 @@ form {
   /* this will push other blocks out of the way */
 
   /* colors */
-  background-color: #ffe08a;
-  color: #4a4a4a;
+  background-color: #624763;
+  color: #F9B3D1;
 
   /* shapes */
   border: 4px dashed;
-  border-radius: 6px;
+  border-style: inset;
+  border-color: #63A375;
+  border-radius: 25px;
   
   font-size: 1.5rem;
   padding: 1.25rem;
@@ -116,7 +118,7 @@ form {
 
 .box {
   background-color: rgba(239, 239, 239, 0.40);
-  border: 2px dashed;
+  border: 2px groove;
   border-radius: 4px;
 
   width: fit-content;
@@ -127,7 +129,7 @@ form {
 
 .right_section {
   
-  background-color: rgba(255, 224, 138, 0.7);
+  background-color: #BCD8C1;
   flex: 1 2 auto; 
   margin: 1rem;
   align-items: center;
@@ -139,7 +141,7 @@ form {
 }
 .left_section {
  
-  background-color: rgba(0, 139, 139, 0.8);
+  background-color: #376D3f;
   flex: 0 1 auto; 
   margin: 1rem;
   padding: 1.5rem;
@@ -157,15 +159,15 @@ form {
 .footer {
   flex-shrink: 0;
   padding: 1rem;
-  background-color: rgba(0, 139, 139, 0.8);
+  background-color: #D8A48F;
   font-size: 1.2rem;
   font-weight: 600;
-  border: 4px dashed;
+  border: 4px double;
   border-radius: 6px;
 }
 
 .footer a {
-  color: rgba(255, 224, 138, 1);
+  color: #624763;
   text-decoration: underline;
 }
 
@@ -310,33 +312,40 @@ form label {
 @media only screen and (max-width: 736px){
     /* Rules in here will only apply when a screen is the correct size */
     /* check it out by using your developer tools to shrink your screen-size */
+    .box {
+      width: inherit;
+    }
     .container {
-      background-color: rgba(204, 8, 162, 0.65);
+      
       flex-direction: column;
       justify-content: center;
       align-items: center;
     }
-    .right_section {
-  
-      background-color: rgba(255, 224, 138, 0.7);
-      flex: 1 2 auto; 
-      margin: 1rem;
-      align-items: center;
-      
-      display: flex;
-      flex-flow: column;
-      
-      
-    }
-
     .left_section {
-      background-color: rgba(0, 139, 139, 0.8);
+      
       flex: 0 1 auto; 
       margin: 1rem;
       padding: 1.5rem;
-      
-
+      display: flex;
+      flex-flow: column;
+      align-items: stretch;
+      width: -webkit-fill-available;
+      flex-grow: inherit;
     }
+    
+    .right_section {
+      
+      flex: 1 0 auto; 
+      margin: 1rem;
+      align-items: baseline;
+      
+      display: flex;
+      flex-flow: column;
+      align-items: stretch;
+      width: -webkit-fill-available;
+    }
+
+  
 }
 
 
